CODA: Align template thumbnails to bottom for consistent layout
- Thumbnails vary in height, which caused some items to appear centered while
  others were not.
- Bottom alignment creates a more consistent and predictable layout.

Signed-off-by: Banobe Pascal <banobe.pascal@collabora.com>
Change-Id: Ic68b67e0eff309ca451cd63faaf1cc017a0232dd

--- a/browser/css/backstage.css
+++ b/browser/css/backstage.css
@@ -332,7 +332,7 @@
 	padding: 0;
 	display: flex;
 	justify-content: center;
-	align-items: center;
+	align-items: end;
 	background: transparent;
 	flex: 1;
 	min-height: 120px;
