Expose Settings dialog in coda-qt
Signed-off-by: Shardul Vikram Singh <shardul.singh@collabora.com>
Change-Id: I390c6a1e17f9c2414e885c36e1e042157217aaec

--- a/browser/css/backstage.css
+++ b/browser/css/backstage.css
@@ -177,6 +177,7 @@
 	margin-inline-end: 20px;
 }
 
+#backstage-options.backstage-sidebar-item,
 #backstage-about.backstage-sidebar-item {
 	justify-content: center;
 	margin-top: 0 !important;
