Disable selection in the backstage
Without this, it was possible to start selection with mouse in the
"Recent documents" text, and continue variously in the backstage.

Signed-off-by: Jan Holesovsky <kendy@collabora.com>
Change-Id: I8da8c9b40bbb7dbd726f2d85399a7109da65064c

--- a/browser/css/backstage.css
+++ b/browser/css/backstage.css
@@ -6,6 +6,9 @@
 	--color-on-primary: #ffffff;
 	--color-primary-text: #ffffff;
 
+	user-select: none;
+	-webkit-user-select: none; /* Safari / WKWebView */
+
 	position: fixed;
 	top: 0;
 	left: 0;
