--- a/browser/css/notebookbar.css
+++ b/browser/css/notebookbar.css
@@ -84,7 +84,13 @@ button.ui-tab.notebookbar {
 	color: var(--color-main-text);
 }
 
-#shareas { & .unolabel { color: var(--color-main-text) } }
+#shareas {
+	overflow: visible;
+}
+
+#shareas .unolabel {
+	color: var(--color-main-text);
+}
 
 .ui-tab.notebookbar[style*='block'] {
 	display: inline-flex !important;
