browser: a11y: show horizontal scrollbar in <nav> at 400% zoom
Change-Id: I40817c226eef949eb14274c073ea482cf41f1c03
Signed-off-by: Henry Castro <hcastro@collabora.com>

--- a/browser/css/menubar.css
+++ b/browser/css/menubar.css
@@ -181,14 +181,20 @@ nav.hasnotebookbar [id^='save'].saved::after {
 	scrollbar-width: none;
 	-ms-scrollbar: none;
 }
-.main-nav.hasnotebookbar::-webkit-scrollbar {
-	height: 0;
-}
+
 .main-nav.hasnotebookbar:not(.readonly) {
 	background: var(--color-main-background);
 	padding: 0px;
 	overflow: scroll hidden;
 	padding-inline-start: 5px;
+}
+
+@media (max-width: 480px) {
+
+	.main-nav.hasnotebookbar {
+		scrollbar-width: unset;
+		-ms-scrollbar: unset;
+	}
 }
 
 /* Customizations to sm-simple theme to make it look like LO menu, lo-menu class */
