Show document name by default: Labels or instructions
At the top of the Writer, within the menu area, the document name is
displayed. When **focused** using the keyboard or clicked with the
mouse, an input field appears that allows the user to change the
document name. This input field does not have a visible label.

Also make the label translatable.

Signed-off-by: Pedro Pinto Silva <pedro.silva@collabora.com>
Change-Id: Id414af5df16e1a170a1d07bbe3080182c93b6987

--- a/browser/css/menubar.css
+++ b/browser/css/menubar.css
@@ -42,10 +42,20 @@
 .document-title {
 	white-space: nowrap;
 	display: flex;
-	align-items: flex-start;
+	align-items: baseline;
 	justify-content: center;
-	flex-direction: column;
+	flex-direction: row;
 	flex: 1 1 auto;
+	gap: 4px;
+}
+
+.document-title:focus-within > label[for='document-name-input'] {
+	clip: unset;
+	height: auto;
+	overflow: visible;
+	position: static;
+	width: auto;
+	color: var(--color-text-lighter);
 }
 
 .readonly .document-title {
