Wrap expander button in heading for screen reader navigation
following the W3C accordion pattern of:
https://www.w3.org/WAI/ARIA/apg/patterns/accordion/examples/accordion/

Signed-off-by: Caolán McNamara <caolan.mcnamara@collabora.com>
Change-Id: Ibfa070dda09ad7ba22058ef0b09af78d52939d89

--- a/browser/css/jsdialogs.css
+++ b/browser/css/jsdialogs.css
@@ -533,6 +533,13 @@ algned to the bottom */
 	margin-top: 8px;
 }
 
+.ui-expander-heading {
+	margin: 0;
+	padding: 0;
+	font: inherit;
+	display: contents;
+}
+
 .ui-expander-label {
 	color: #666;
 }
