browser: a11y: fix button image not grayed out when disabled
Change-Id: I7d1b2a9e3700f0504ae1ee53c706634c5c4a1e90
Signed-off-by: Henry Castro <hcastro@collabora.com>

--- a/browser/css/btns.css
+++ b/browser/css/btns.css
@@ -130,6 +130,11 @@ button.jsdialog img {
 	max-height: 100%;
 }
 
+button.jsdialog[disabled] img {
+	filter: grayscale(100%);
+	opacity: 0.5;
+}
+
 .annotation-btns-container {
 	display: flex;
 	flex-direction: row;
